[tool.poetry]
name = "common-py"
version = "0.2.0"
description = ""
authors = ["Jake Stanley <prudentia713@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
appdirs = "^1.4.4"

[tool.poetry.group.dev.dependencies]
parameterized = "^0.9.0"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
